--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">cesium-angular-example</string>
     <string name="title_activity_main">cesium-angular-example</string>
-    <string name="package_name">com.example.gpsTracker</string>
-    <string name="custom_url_scheme">com.example.gpsTracker</string>
+    <string name="package_name">com.cesuim.location</string>
+    <string name="custom_url_scheme">com.cesuim.location</string>
 </resources>
